update : fetch avaliable slots
